# dpnm

./: .gitignore  CMakeLists.txt
PNData/: boundary_pores.csv  config.py  langmuir.txt  pore_throats.csv  pores_data.csv
config/: config.ini
input/: __init__.py  network_data.py  network_data_conv.py  network_data_cpp.py  network_data_fpnm.py  network_data_python.py  parameters.py  parameters_frame.py  plot_network.py  props.py
latex/PNDiffusion/: PNDiffusion.tex
latex/PNM_1_phase/: PNOnePhase.tex  math_models.tex
latex/diffusion/: diff_1D.tex  diff_general.tex
latex/models/: models.tex  two_phase_pnm.txt
numerical/: __init__.py  cfd_test.py  cfd_test_coupled.py  cfd_test_diffus.py  matrix_solution.py  wrapper.cpp
numerical/coupling/: Aggregator.cpp  Aggregator.h  CouplingIniConds.cpp  CouplingIniConds.h  CouplingMatrix.cpp  CouplingMatrix.h  CouplingParamsOut.cpp  CouplingParamsOut.h  DiffusionFlow.cpp  DiffusionFlow.h  DiffusionMath.cpp  DiffusionMath.h  DiffusionPNM.cpp  DiffusionPNM.h  DiffusionPartFlow.cpp  DiffusionPartFlow.h  DiffusionPartMath.cpp  DiffusionPartMath.h  IniConds.cpp  IniConds.h  MatrixSolver.cpp  MatrixSolver.h  ParamsOut.cpp  ParamsOut.h
numerical/equation/: Equation.cpp  Equation.h
numerical/equation_diff/: Equation.cpp  Equation.h  EquationDiffusion.cpp  EquationDiffusion.h
numerical/equation_pnm/: EquationPNM.cpp  EquationPNM.h
numerical/math/: Convective.cpp  Convective.h  Local.cpp  Local.h  Props.cpp  Props.h
numerical/math_diff/: Convective.cpp  Convective.h  ConvectiveDiffusion.cpp  ConvectiveDiffusion.h  Local.cpp  Local.h  LocalDiffusion.cpp  LocalDiffusion.h  Props.cpp  Props.h  PropsDiffusion.cpp  PropsDiffusion.h
numerical/math_pnm/: NetworkData.cpp  NetworkData.h  PropsPNM.cpp  PropsPNM.h  PropsPnm.cpp  PropsPnm.h
numerical/pnm_python/: __init__.py  matrix_portrait.py  matrix_solution.py
numerical/utilities/: PythonConversions.h
numerics/: __init__.py  matrix.py  matrix_portrait.py  matrix_solution.py
output/: .gitignore  __init__.py  fig2.txt  fig3.txt  fig4.txt  fig_langmuir.plt  fig_press_conc.plt  fig_press_conc.txt  fig_press_flowrates.plt  fig_press_flowrates.txt  plot_params.py  visualisation.py
